tests/NormalTests/paczka1/small_fuzzy/32561682.err
Error in line 1: tfATy8n A235 64,7
Error in line 2: xkgdTh2sw A502 96,3
Error in line 8: EdWjSEcIk4n A502 41,8
